src/components/quiz.css
.currentQuestion {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  max-width: 100%;
}

.currentQuestion img {
  width: 50%;
}

.questionText {
  font-size: 24px;
  text-align: center;
  margin: 15px;
}

.answerContainer {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  max-width: 300px;
  margin-bottom: 30px;
}

.answerOption {
  width: 120px;
  height: 80px;
  margin: 15px;
  border-radius: 20px;
  border: 1px solid black;
  box-shadow: 4px 4px black;
  font-size: 16px;
  outline: none;
  transition: .4s ease-in-out;
  background-color: white;
  font-family: 'Actor', sans-serif;
}

.answerOption:active {
  border: 4px solid black;
}

.moveOn {
  width: 200px;
  height: 40px;
  border-radius: 30px;
  border: 1px solid black;
  transition: .5s ease-in-out;
  font-size: 16px;
  background-color: rgb(255, 255, 255);
  outline: none;
  font-family: 'Actor', sans-serif;
}

.moveOn:hover {
  color: gray;
}

h1,
h3 {
  font-family: 'Paytone One', sans-serif;
  padding: 0px 10px;
}

p {
  font-family: 'Actor', sans-serif;
}

.welcomeContainer {
  width: 100%;
  min-height: 400px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
  /* padding: 10px 30px; */
}

.welcomeGreeting{
  font-size: 60px;
  width: 100%;
}

.startButton {
 width: 200px;
 height: 150px;
}

.green {
  background: rgb(105, 199, 105);
  transform: scale(1.2);
}

.green:disabled {
  color: black;
  font-weight: bold;
}

/* .red {
  background-color: rgb(206, 55, 55);
  transform: scale(0.8);
} */

@media (max-width: 1024px) {
  .currentQuestion img {
    width: 100%;
  }
}

